# finder

./: CMakeLists.txt  README.md  data_saver.cpp  data_saver.h  dublicates.pro  finder.cpp  finder.h  finder.pro  gen_tests.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  scanner.cpp  scanner.h  test_description.txt
